--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-multi-slider-pro",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A highly customizable, accessible multi-range slider component for React with keyboard navigation, touch support, and Tailwind CSS styling",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -45,7 +45,22 @@
     "tailwindcss": "^3.3.3"
   },
   "keywords": [
-    "react"
+    "react",
+    "slider",
+    "range-slider",
+    "multi-slider",
+    "multi-range",
+    "input",
+    "form",
+    "ui",
+    "component",
+    "accessible",
+    "keyboard-navigation",
+    "touch",
+    "mobile",
+    "tailwind",
+    "customizable",
+    "responsive"
   ],
   "author": "Andrei-Constantin Alexandru",
   "license": "MIT",
